--- a/app/styles/primereact.css
+++ b/app/styles/primereact.css
@@ -20,6 +20,10 @@
 	border: 1px #fff6 solid;
 	font-family: inherit;
 	min-width: 30%;
+
+	@media (width < 512px) {
+		transform: scale(0.8);
+	}
 }
 
 .p-dialog>* {
@@ -111,12 +115,12 @@
 
 /* SIDEBAR */
 .p-sidebar {
-    background-color: #112;
+	background-color: #112;
 }
 
 .p-sidebar-mask {
-    backdrop-filter: blur(5px);
-    transition: all .2s ease-in-out;
+	backdrop-filter: blur(5px);
+	transition: all .2s ease-in-out;
 }
 
 /* ANIMATIONS */
